--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,13 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 windows = { version = "0.58.0", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Security", "Win32_System_SystemServices", "Win32_Storage", "Win32_Storage_FileSystem"] }
 pdb = "0.8.0"
+anyhow = "1.0.86"
+
+[lints.clippy]
+nursery = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+unwrap_used = "warn"
+expect_used = "warn"
 
 [lib]
 name = "examplemod"
