--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ anyhow = "1.0.86"
 getopts = "0.2.21"
 bindgen = "0.69.4"
 dirs = "5.0.1"
+indicatif = "0.15.0"
 
 [lints.clippy]
 nursery = { level = "warn", priority = -1 }
