--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ retour = { version = "0.3", features = ["static-detour"] }
 retour-utils = "0.2.1"
 ctor = "0.2.8"
 ntapi = "0.4.1"
-dll-syringe = "=0.15.2"
+dll-syringe = "0.15.2"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 windows = { version = "0.58.0", features = [
@@ -23,7 +23,7 @@ anyhow = "1.0.86"
 getopts = "0.2.21"
 bindgen = "0.69.4"
 dirs = "5.0.1"
-indicatif = "0.15.0"
+indicatif = "0.17.8"
 
 [lints.clippy]
 nursery = { level = "warn", priority = -1 }
