--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,8 @@ edition = "2021"
 retour = { version = "0.3", features = ["static-detour"] }
 ntapi = "0.4.1"
 dll-syringe = "0.15.2"
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
 windows = { version = "0.58.0", features = [
     "Win32",
-    "Win32_System",
-    "Win32_System_LibraryLoader",
     "Win32_System_Threading",
     "Win32_Security"
 ] }
@@ -20,15 +16,13 @@ pdb = "0.8.0"
 anyhow = "1.0.86"
 getopts = "0.2.21"
 bindgen = "0.69.4"
-dirs = "5.0.1"
 indicatif = "0.17.8"
 regex = "1.10.5"
 lazy-regex = "3.1.0"
 topo_sort = "0.4.0"
 rivets-macros = { path = "../rivets/rivets-macros" }
+rivets-shared = { path = "../rivets/rivets-shared" }
 libloading = "0.8.5"
-cpp_demangle = "0.4.3"
-undname = "1.1.2"
 
 [lints.clippy]
 nursery = { level = "warn", priority = -1 }
