--- a/rivets-macros/Cargo.toml
+++ b/rivets-macros/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 syn = "2.0.72"
 quote = "1.0.36"
 proc-macro2 = "1.0.86"
+rivets-shared = { path = "../rivets-shared" }
 
 [lib]
 proc-macro = true
