--- a/rivets-macros/Cargo.toml
+++ b/rivets-macros/Cargo.toml
@@ -8,6 +8,7 @@ syn = "2.0.72"
 quote = "1.0.36"
 proc-macro2 = "1.0.86"
 rivets-shared = { path = "../rivets-shared" }
+anyhow = "1.0.86"
 
 [lib]
 proc-macro = true
