--- a/rivets-shared/cargo.toml
+++ b/rivets-shared/cargo.toml
@@ -16,6 +16,10 @@ windows = { version = "0.58.0", features = [
     "Win32_System_LibraryLoader",
 ] }
 dirs = "5.0.1"
+syn = "2.0.72"
+proc-macro2 = "1.0.86"
+regex = "1.10.5"
+lazy-regex = "3.1.0"
 
 [lib]
 name = "rivets_shared"
