--- a/rivets-macros/Cargo.toml
+++ b/rivets-macros/Cargo.toml
@@ -10,6 +10,7 @@ proc-macro2 = "1.0.86"
 rivets-shared = { path = "../rivets-shared" }
 anyhow = "1.0.86"
 lazy-regex = "3.1.0"
+darling = "0.20.10"
 
 [lib]
 proc-macro = true
