--- a/rivets-injector/Cargo.toml
+++ b/rivets-injector/Cargo.toml
@@ -10,5 +10,7 @@ dll-syringe = "0.15.2"
 windows = { version = "0.58.0", features = [
     "Win32",
     "Win32_System_Threading",
-    "Win32_Security"
+    "Win32_System_Pipes",
+    "Win32_Security",
 ] }
+zip = "2.1.6"
