--- a/rivets-injector/Cargo.toml
+++ b/rivets-injector/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.86"
 clap = { version = "4.5", features = ["derive"] }
 dll-syringe = "0.15.2"
+semver = "1.0.23"
 windows = { version = "0.58.0", features = [
     "Win32",
     "Win32_System_Threading",
