--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ env:
 jobs:
   fmt:
     name: Check formatting
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,7 +28,7 @@ jobs:
 
   clippy:
     name: Clippy
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     if: ${{ github.event_name == 'push' || !github.event.pull_request.draft }}
     steps:
       - name: Checkout
@@ -63,9 +63,9 @@ jobs:
             - os_name: Windows-x86_64
               os: windows-latest
               target: x86_64-pc-windows-gnu
-            - os_name: Linux-x86_64
-              os: ubuntu-latest
-              target: x86_64-unknown-linux-gnu
+            # - os_name: Linux-x86_64
+            #   os: ubuntu-latest
+            #   target: x86_64-unknown-linux-gnu
           toolchain:
             - nightly
     steps:
