--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,14 +33,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Stable rust toolchain
-        run: rustup toolchain install stable --profile minimal
+      - name: Nightly rust toolchain
+        run: rustup toolchain install nightly --profile minimal
+      - name: Select nightly toolchain
+        run: rustup default nightly
       - name: Add Clippy
         run: rustup component add clippy
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: "rust-stable"
+          prefix-key: "rust-nightly"
           shared-key: "clippy"
       - name: Install cargo-binstall
         uses: cargo-bins/cargo-binstall@main 
