--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,6 +30,8 @@ jobs:
     name: Clippy
     runs-on: windows-latest
     if: ${{ github.event_name == 'push' || !github.event.pull_request.draft }}
+    permissions:
+      security-events: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
