--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ license-file = "LICENSE.md"
 repository = "https://github.com/factorio-rivets/rivets"
 
 [dependencies]
-rivets-macros = { path = "../rivets/rivets-macros" }
-rivets-shared = { path = "../rivets/rivets-shared" }
+rivets-macros = { path = "../rivets-crate/rivets-macros" }
+rivets-shared = { path = "../rivets-crate/rivets-shared" }
+retour = { version = "0.3", features = ["static-detour"] }
 
 [lints.clippy]
 nursery = { level = "warn", priority = -1 }
