refactor: Move stable ABI structs into rivets rs in order to premote code reusablity

--- a/rivets-shared/Cargo.toml
+++ b/rivets-shared/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/factorio-rivets/rivets"
 cpp_demangle = "0.4"
 undname = "1.1"
 syn = "2.0"
+abi_stable = "0.11"
 
 [lib]
 name = "rivets_shared"
