--- a/rivets-shared/Cargo.toml
+++ b/rivets-shared/Cargo.toml
@@ -10,7 +10,15 @@ repository = "https://github.com/factorio-rivets/rivets"
 cpp_demangle = "0.4"
 undname = "1.1"
 syn = "2.0"
-abi_stable = "0.11"
+pdb = "0.8"
+anyhow = "1.0"
+windows = { version = "0.58", features = [
+    "Win32",
+    "Win32_System",
+    "Win32_System_LibraryLoader",
+] }
+serde = { version = "1.0", features = ["derive"] }
+retour = { version = "0.3", features = ["static-detour"] }
 
 [lib]
 name = "rivets_shared"
