Feat: move injection equipment into windows dll (#6)
* refactor: Move stable ABI structs into rivets rs in order to premote code reusablity

* feat: Add abi_stable to list of re-exported crates

* fix: Update proc macro hook fn pointer to be safe across abi boundaries

* refactor: Rename rivets:initalize!() to rivets:finalize!()

* chore: cargo fmt

* fix: Rename exposed abi to match rivets_entry_point\0 in linux injector

* Revert "fix: Rename exposed abi to match rivets_entry_point\0 in linux injector"

This reverts commit d55b7a209a5c9644c742a975ff7639ed8d92016a.

* fix: Add missing #[no_mangle] onto rivets get hooks abi

* feat/change windows injector to inject all mods instead of just librivets

* chore: cargo fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rivets-rs"
+name = "rivets"
 version = "0.1.0"
 edition = "2021"
 authors = ["Zachary Picco <zacharypicco@gmail.com>"]
@@ -11,6 +11,7 @@ repository = "https://github.com/factorio-rivets/rivets-rs"
 rivets-macros = { path = "rivets-macros" }
 rivets-shared = { path = "rivets-shared" }
 retour = { version = "0.3", features = ["static-detour"] }
+dll-syringe = { version = "0.15", features = ["full"] }
 
 [lints.clippy]
 nursery = { level = "warn", priority = -1 }
